<package>
  <name>pcl_feature_extraction</name>
  <version>0.0.1</version>
  <description>Point Cloud Library features evaluation</description>
  <author email="pl.negre@uib.cat">Pep Lluis Negre</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/srv/pcl_feature_extraction</url>
  <url type="bugtracker">https://github.com/srv/pcl_feature_extraction/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cmake_modules</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl_ros</run_depend>

</package>
